<resources>
    <string name="app_name">Dream organizer</string>
    <!--Home Screen-->
    <string name="app_title_first_part">My</string>
    <string name="app_title_second_part">D reams</string>
    <string name="app_title_third_part">Organized</string>
    <string name="total_money">Total money</string>
    <string name="dream_list">Dream list</string>
    <string name="rest_of_the_money">Rest of the money</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_your_new_dream_here">Add your new Dream Here</string>
    <string name="dream_name">Dream Name</string>
    <string name="dream_value">Value</string>
    <string name="dream_value_hint">R$ 0,00</string>
    <string name="required_text_input_warning">Required *</string>
    <string name="invalid_value_this_field_requires_a_numeral">Valor inválido, esse campo requer um número</string>
    <string name="save">Save</string>
    <string name="click_here_to_insert_an_image">Click here to insert an image</string>
    <string name="default_blank_value"> </string>
    <string name="add_new_dream">Add new Dream</string>
    <string name="monetary_value_description">R$ %d</string>
    <string name="insert_the_monetary_value_here">Insert the monetary value here</string>
    <string name="input_new_value">Input new value</string>
    <string name="remove_money">Remove Money</string>
    <string name="cancel">Cancel</string>
    <string name="you_dont_have_the_money_value_to_remove">You Don\'t have the money value to remove</string>
    <string name="monetary_value_update">Monetary Value Update</string>
    <string name="monetary_value_not_update_error_message">Monetary Value Not Update, please type only numbers.</string>
    <string name="discart_changes">Discart Changes</string>
    <string name="save_changes">Save Changes</string>
    <string name="you_have_no_more_money_to_add">You have no more money to add</string>
    <string name="delete">Delete</string>
    <string name="cancel_dialog_alert_description">Are you sure you want to delete?</string>
    <string name="dream_edited_dialog_description">Modifications have been made. Do you want to save them?</string>
    <string name="plus_money_reserved">Plus Money Reserved</string>
    <string name="field_cannot_be_empty">Field cannot be empty</string>

</resources>