<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.HomeFragment"
    android:background="@color/black">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">


        <TextView
            android:id="@+id/tv_home_title_first_part"
            style="@style/home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title_first_part"
           />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/iv_eiffel_tower"
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/eiffel_tower" />

            <TextView
                style="@style/home_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/app_title_second_part"
                android:textSize="40sp" />


        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">


        <TextView
            style="@style/home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="45sp"
            android:text="@string/app_title_third_part" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            >

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/bt_total_money_home"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="4dp"
                android:scaleType="fitCenter"
                app:strokeColor="@color/white"
                app:srcCompat="@drawable/ic_money_btn" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_money"
                android:textColor="@color/old_gold"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="16dp" />

        </LinearLayout>


        <TextView
            android:id="@+id/tv_total_money_value_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/old_gold"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            tools:text="R$ 10.000,00"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dream_list"
            android:textColor="@color/old_gold"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_home_dream_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:scrollbars="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="10"
            tools:listitem="@layout/fragment_card_item" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rest_of_the_money"
            android:textColor="@color/old_gold"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/tv_rest_of_the_money_value_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/old_gold"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            tools:text="R$ 3.000,00"/>
    </LinearLayout>

    <Button
        android:id="@+id/bt_home_fragment_add_new_dream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/add_new_dream"/>



</LinearLayout>